--- a/style.css
+++ b/style.css
@@ -4,46 +4,113 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
 }
 
 header {
     display: flex;
+    justify-content: center;
     background: rgb(21, 135, 216);
     clip-path: polygon(0 0, 180% 0, 0 100%);
-    min-height: 300px;
-    padding: 20px;
-    position: relative;
+    min-height: 320px;
+    width: 100%;
+    padding: 10px;
     color: #fff;
+}
+
+.icons{
+    gap: 20px;
+    display: flex;
+    color: #000;
+    font-size: larger;
+}
+
+.right{
+    float: right;
+}
+
+.user img{
+    max-width: 18vw;
 }
 
 .about {
     background-color: #fff;
     padding: 10px;
-    max-width: 300px;
+    max-width: 55%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     position: relative;
-    max-height: 200px;
     color: #333;
 }
 
-img {
-    max-height: 300px;
-}
 
-section{
+section {
     display: grid;
-    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
     gap: 20px;
+    width: 80%;
+    margin-bottom: 10px;
 }
 
-.project{
+.project {
     border: 1px solid silver;
-    padding: 20px;
+}
+
+.screenshot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 150px;
+    width: 100%;
+    color: #fff;
+}
+
+.details{
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.one{
+    background: crimson;
+}
+
+.two{
+    background: violet;
+}
+
+.three{
+    background: green;
+}
+
+.four{
+    background: purple;
+}
+
+.five{
+    background: orange;
+}
+
+.six{
+    background: skyblue;
 }
 
 footer {
     display: flex;
     background: rgb(21, 135, 216);
     color: #fff;
-    padding: 10px;
+    padding: 20px;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+
+footer img{
+    width: 300px;
+    max-height: 200px;
 }
