--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
+    font-family: 'Playfair Display';
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,37 +10,48 @@ header {
     display: flex;
     justify-content: center;
     background: rgb(21, 135, 216);
-    clip-path: polygon(0 0, 180% 0, 0 100%);
-    min-height: 320px;
+    clip-path: polygon(0 0, 200% 0, 0 100%);
+    min-height: 300px;
     width: 100%;
-    padding: 10px;
+    padding: 30px;
     color: #fff;
 }
 
-.icons{
+
+.icons {
     gap: 20px;
     display: flex;
     color: #000;
     font-size: larger;
 }
 
-.right{
+.right {
     float: right;
 }
 
-.user img{
-    max-width: 18vw;
+.user {
+    height: 200px;
+    transform: scaleY(1.15);
+    color: white;
+    text-shadow: 2px 2px 1.5px black;
+    font-size: 2rem;
+    background: center / cover no-repeat url("./images/secretary.jpg");
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 10px;
 }
 
 .about {
+    display: flex;
     background-color: #fff;
-    padding: 10px;
-    max-width: 55%;
+    max-width: 50%;
+    height: 220px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     position: relative;
     color: #333;
+    padding: 5px;
 }
-
 
 section {
     display: grid;
@@ -53,6 +63,7 @@ section {
 
 .project {
     border: 1px solid silver;
+
 }
 
 .screenshot {
@@ -62,55 +73,37 @@ section {
     min-height: 150px;
     width: 100%;
     color: #fff;
+    background: center / cover no-repeat url("./images/secretary.jpg");
 }
 
-.details{
+.details {
     padding: 10px;
     margin-bottom: 10px;
 }
 
-.title{
+.title {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.one{
-    background: crimson;
-}
-
-.two{
-    background: violet;
-}
-
-.three{
-    background: green;
-}
-
-.four{
-    background: purple;
-}
-
-.five{
-    background: orange;
-}
-
-.six{
-    background: skyblue;
-}
 
 footer {
     display: flex;
     background: rgb(21, 135, 216);
     color: #fff;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
     justify-content: space-around;
     align-items: center;
     margin-top: 20px;
 }
 
-footer img{
-    width: 300px;
-    max-height: 200px;
+.info{
+    font-size: 1.2em;
+}
+
+footer img {
+    width: 400px;
+    max-height: 300px;
 }
