--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body {
 header {
     display: flex;
     justify-content: center;
-    background: rgb(21, 135, 216);
-    clip-path: polygon(0 0, 200% 0, 0 100%);
+    /* background: rgb(21, 135, 216);
+    clip-path: polygon(0 0, 200% 0, 0 100%); */
     min-height: 300px;
     width: 100%;
     padding: 30px;
     color: #fff;
 }
-
 
 .icons {
     gap: 20px;
@@ -44,6 +43,7 @@ header {
 
 .about {
     display: flex;
+    flex-direction: column;
     background-color: #fff;
     max-width: 50%;
     height: 220px;
@@ -87,7 +87,6 @@ section {
     align-items: center;
 }
 
-
 footer {
     display: flex;
     background: rgb(21, 135, 216);
@@ -99,11 +98,72 @@ footer {
     margin-top: 20px;
 }
 
-.info{
+.info {
     font-size: 1.2em;
 }
 
 footer img {
     width: 400px;
     max-height: 300px;
+}
+
+/* For Mobile (small screens) */
+@media (max-width: 380px) {
+    body{
+        font-size: 12px;
+    }
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        /* clip-path: polygon(0 0, 150% 0, 0 60%); */
+        gap: 30px;
+    }
+
+    .user{
+        transform: scaleY(1);
+        background: center / cover no-repeat url("./images/secretary.jpg");
+        display: flex;
+        justify-content: center;
+        width: 90%;
+    }
+
+    .about{
+        max-width: 90%;
+        height: 250px;
+        justify-content: center;
+    }
+
+    section{
+        grid-template: 1fr / 1fr;
+    }
+
+    footer{
+        flex-direction: column;
+        justify-content: center;
+        width: 80%;
+        padding: 20px;
+        gap: 10px;
+    }
+
+    footer img{
+        width: 300px;
+        max-height: 200px;
+    }
+
+    .icons{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+}
+
+/* For Tablets (medium screens) */
+@media (min-width: 769px) and (max-width: 1024px) {
+    body {
+        background-color: lightgreen;
+    }
 }
